# GenesisLoopCenterelKnowledge

./: .gitignore  AI_FEATURES_RESTORATION_SUMMARY.md  BUTTON_KEYS_FIXED_SUMMARY.md  POETRY_COMMANDS.md  POETRY_QUICK_START.md  POETRY_SETUP_COMPLETE.md  PROJECT_STRUCTURE.md  RAY_TASK_SOLUTION.md  RAY_TEMPORAL_AWARENESS_COMPLETE.md  README.md  SELF_LEARNING_SYSTEM_COMPLETE.md  TASK_STRUCTURE_UPDATE_SUMMARY.md  agents_test.py  analyze_memory_structure.py  chats.py  debug_memory_requests.py  debug_ray_request.py  extract_json.py  final_system_test.py  fix_metadata_encoding.py  install.py  install_ai_deps.py  install_json_deps.py  install_json_viewer.py  launch_all.py  launch_api.py  launch_dashboard.py  launch_log_dashboard.py  launch_streamlit.py  main.py  memory.txt  memory_422_solution.md  memory_migration_system.py  memory_store_examples.json  monitor_memory_health.py  pyproject-simple.toml  pyproject.toml  quick_memory_peek.py  quick_test.py  requirements-api.txt  (+40 more)
.github/: copilot-instructions.md
.streamlit/: config.toml
config/: default_heartbeat.json  heartbeat.py  ray_filesystem_config.py
docs/: AI_FEATURES_GUIDE.md  CHANGELOG.md  COMMAND_HISTORY_SUMMARY.md  DASHBOARD_CONFIGURATION_GUIDE.md  DEPENDENCY_RESOLUTION_SUMMARY.md  MEMORY_SYSTEM_GUIDE.md  QUICK_REFERENCE.md  RAY_READ_FILE_USAGE.md  README.md  README_TASK_SYSTEM.md  READ_FILE_IMPLEMENTATION_SUMMARY.md  READ_FILE_TEST_PACKAGE_SUMMARY.md  SELF_LEARNING_SYSTEM_COMPLETE.md  STREAMLIT_DASHBOARD_UPDATES.md  USAGE_EXAMPLES.md  agent_creation_api.md  agents_api_frontend_guide.md  agents_api_quick_reference.md  agents_react_integration.md  api_task_system.md  log-dashboard-guide.md  multi_action_quick_reference.md  multi_action_tasks.md  ray-directory-quick-reference.md  ray-reflection-guide.md  ray-task-commands-reference.md  real-time-monitoring-guide.md  reflection-system-guide.md  routing-implementation-summary.md  server-setup-guide.md  web-scraper-frontend-guide.md
examples/: README.md  frontend_overwrite_file_test.html  ray_overwrite_file_example.py  read_file_examples.py  test_agent_creation.py  test_agent_creation_simple.py  test_agents_route.py  test_agents_simple.py  (+3 more)
(+291 files in other folders)
