[tool.poetry]
name = "fastapi-basic"
version = "0.1.0"
description = "A basic FastAPI server"
authors = ["Your Name <your.email@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
fastapi = "0.104.1"
uvicorn = "0.24.0"
starlette = "0.27.0"
pydantic = "^2.0.0"
requests = "^2.32.4"
rich = "^13.7.0"
typer = "^0.9.0"
beautifulsoup4 = "^4.12.0"
lxml = "^4.9.0"
psutil = "^5.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
httpx = "^0.28.1"
streamlit = "^1.47.1"
pandas = "^2.3.1"
plotly = "^6.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"